fixing bugs gallery, adding images, resizing speakers photos

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
           <p>Here are some of our speakers and mentors</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
+        <div class="row justify-content-center">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063375/bsides_site/speakers/1_xhgenv.jpg" alt="Hafidh Zouahi" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/1_j9ssaw.jpg" alt="Hafidh Zouahi" class="img-fluid">
               <div class="details">
                 <h3><a href="hfdz.html">Hafidh Zouahi</a></h3>
                 <p class="text-capitalize">Computer systems engineer <br> with a keen interest in security</p>
@@ -194,12 +194,12 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641057060/bsides_site/speakers/7_qakoad.png" alt="Hamza Tahmi" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259307/bsides_site/speakers/small%20sizes/7_onfcla.jpg" alt="Hamza Tahmi" class="img-fluid">
               <div class="details">
                 <h3><a href="hmzth.html">Hamza Tahmi</a></h3>
-                <p class="text-capitalize">Security engineer focusing on building secure products</p>
+                <p class="text-capitalize">Security engineer focusing <br>on building secure products</p>
                 <div class="social">
                   <a href="https://www.facebook.com/WhyYouAreVisitingMyProfile" target="_blank"><i class="fa fa-facebook"></i></a>
                   <a href="https://www.linkedin.com/in/hamza-tahmi/" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -207,9 +207,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063387/bsides_site/speakers/2_pd8tey.jpg" alt="Benaissa Ayoub" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/2_yfrpht.jpg" alt="Benaissa Ayoub" class="img-fluid">
               <div class="details">
                 <h3><a href="ayben.html">Benaissa Ayoub</a></h3>
                 <p class="text-capitalize">crypto engineer at Zama</p>
@@ -227,9 +227,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063394/bsides_site/speakers/4_az7fra.jpg" alt="Bilal Retiat" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259304/bsides_site/speakers/small%20sizes/4_laa2rw.jpg" alt="Bilal Retiat" class="img-fluid">
               <div class="details">
                 <h3><a href="blrt.html">Bilal Retiat</a></h3>
                 <p class="text-capitalize">Cybersecurity Specialist at Realistic Security</p>
@@ -247,9 +247,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063400/bsides_site/speakers/5_rxovaq.jpg" alt="Bendali Brahim" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259305/bsides_site/speakers/small%20sizes/5_ae42sy.jpg" alt="Bendali Brahim" class="img-fluid">
               <div class="details">
                 <h3><a href="bhben.html">Bendali Brahim</a></h3>
                 <p class="text-capitalize">security researcher at Synack Red Team</p>
@@ -261,12 +261,12 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111324/bsides_site/speakers/6_yd4dff.jpg" alt="Nasreddine Bencherchali" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259304/bsides_site/speakers/small%20sizes/6_cjnvwz.jpg" alt="Nasreddine Bencherchali" class="img-fluid">
               <div class="details">
                 <h3><a href="nsrben.html">Nasreddine Bencherchali</a></h3>
-                <p class="text-capitalize">Detection Engineer, Threat Hunter & Security Researcher</p>
+                <p class="text-capitalize">Detection Engineer, Threat Hunter <br>& Security Researcher</p>
                 <div class="social">
                   <a href="https://twitter.com/nas_bench" target="_blank"><i class="fa fa-twitter"></i></a>
                   <a href="https://nasbench.medium.com/" target="_blank">
@@ -280,9 +280,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111362/bsides_site/speakers/8_dgqjo9.png" alt="Zineddine Boudegna" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/8_ht4srr.jpg" alt="Zineddine Boudegna" class="img-fluid">
               <div class="details">
                 <h3><a href="zinben.html">Zineddine Boudegna</a></h3>
                 <p class="text-capitalize">Cybersecurity director at Deloitte</p>
@@ -294,9 +294,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112719/bsides_site/speakers/9_tdhays.png" alt="Merouan Oussama Abdallah" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/9_bpjebn.jpg" alt="Merouan Oussama Abdallah" class="img-fluid">
               <div class="details">
                 <h3><a href="ousmer.html">Merouan Oussama Abdallah</a></h3>
                 <p class="text-capitalize">technical department's manager <br>at Shellmates club & Cybersecurity enthusiast</p>
@@ -309,9 +309,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112742/bsides_site/speakers/10_orxpc7.png" alt="Mokrane Abdelmalek" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259307/bsides_site/speakers/small%20sizes/10_dvaqtj.jpg" alt="Mokrane Abdelmalek" class="img-fluid">
               <div class="details">
                 <h3><a href="mokrn.html">Mokrane Abdelmalek</a></h3>
                 <p class="text-capitalize">Dev co-manager at GDG Algiers <br>& Cybersecurity enthusiast</p>
@@ -350,26 +350,26 @@
       </div>
 
       <div class="owl-carousel gallery-carousel animation-left">
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914655/bsides_site/gallery/1_nzrxaa.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914655/bsides_site/gallery/1_nzrxaa.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/2_uz84qk.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/2_uz84qk.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914645/bsides_site/gallery/3_rxw8gn.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914645/bsides_site/gallery/3_rxw8gn.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238434/bsides_site/gallery/IMG_20211123_150152_ydpemy.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238434/bsides_site/gallery/IMG_20211123_150152_ydpemy.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641160562/bsides_site/gallery/res-console.cloudinary_qdc7nk.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641160562/bsides_site/gallery/res-console.cloudinary_qdc7nk.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238401/bsides_site/gallery/IMG_20210703_165548_pv7yda.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238401/bsides_site/gallery/IMG_20210703_165548_pv7yda.jpg" width="270" height="180" alt=""></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914650/bsides_site/gallery/4_k4bkza.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914650/bsides_site/gallery/4_k4bkza.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914697/bsides_site/gallery/5_olmnwi.png" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914697/bsides_site/gallery/5_olmnwi.png" width="270" height="180" alt="" ></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238403/bsides_site/gallery/IMG_20211109_171827_avn9cm.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238403/bsides_site/gallery/IMG_20211109_171827_avn9cm.jpg" width="270" height="180" alt="" ></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914674/bsides_site/gallery/6_aqlnxo.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914674/bsides_site/gallery/6_aqlnxo.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914658/bsides_site/gallery/7_lmk22e.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914658/bsides_site/gallery/7_lmk22e.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238242/bsides_site/gallery/20211130_145007_qqttvu.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238242/bsides_site/gallery/20211130_145007_qqttvu.jpg" width="270" height="180" alt=""></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/8_wwgcxb.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/8_wwgcxb.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914640/bsides_site/gallery/9_qfncgc.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914640/bsides_site/gallery/9_qfncgc.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238107/bsides_site/gallery/FB_IMG_1544615348289_d2pdlf.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238107/bsides_site/gallery/FB_IMG_1544615348289_d2pdlf.jpg" width="270" height="180" alt=""></a>
       </div>
       <br>
       <div class="owl-carousel gallery-carousel animation-right">
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914655/bsides_site/gallery/1_nzrxaa.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914655/bsides_site/gallery/1_nzrxaa.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/2_uz84qk.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/2_uz84qk.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238228/bsides_site/gallery/IMG_5503_b13uog.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238228/bsides_site/gallery/IMG_5503_b13uog.jpg" width="270" height="180" alt=""></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914645/bsides_site/gallery/3_rxw8gn.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914645/bsides_site/gallery/3_rxw8gn.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914650/bsides_site/gallery/4_k4bkza.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914650/bsides_site/gallery/4_k4bkza.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238367/bsides_site/gallery/20210703_104743_mbelei.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238367/bsides_site/gallery/20210703_104743_mbelei.jpg" width="270" height="180" alt=""></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914697/bsides_site/gallery/5_olmnwi.png" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914697/bsides_site/gallery/5_olmnwi.png" width="270" height="180" alt="" ></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914674/bsides_site/gallery/6_aqlnxo.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914674/bsides_site/gallery/6_aqlnxo.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238107/bsides_site/gallery/FB_IMG_1544615348289_d2pdlf.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238107/bsides_site/gallery/FB_IMG_1544615348289_d2pdlf.jpg" width="270" height="180" alt=""></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914658/bsides_site/gallery/7_lmk22e.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914658/bsides_site/gallery/7_lmk22e.jpg" width="270" height="180" alt=""></a>
-        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/8_wwgcxb.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914663/bsides_site/gallery/8_wwgcxb.jpg" width="270" height="180" alt=""></a>
+        <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641238404/bsides_site/gallery/20211123_130640_dwlzuc.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641238404/bsides_site/gallery/20211123_130640_dwlzuc.jpg" width="270" height="180" alt=""></a>
         <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1606914640/bsides_site/gallery/9_qfncgc.jpg" class="venobox" data-gall="gallery-carousel"><img src="https://res.cloudinary.com/shellmates-club/image/upload/v1606914640/bsides_site/gallery/9_qfncgc.jpg" width="270" height="180" alt=""></a>
       </div>
 
