--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
           <li><a href="#about">About</a></li>
           <li><a href="#speakers">Speakers</a></li>
           <!-- <li><a href="#schedule">Schedule</a></li> -->
-          <!-- <li><a href="#venue">Venue</a></li> -->
+          <li><a href="#venue">Venue</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
+          <li><a href="#faq">FAQ</a></li>
           <li><a href="#contact">Contact</a></li>
           <li class="register"><a href="#registration">Register Now</a></li> 
         </ul>
@@ -335,6 +336,106 @@
 
     </section>
 
+     <!--==========================
+      Venue Section
+    ============================-->
+    <section id="venue" class="wow fadeInUp">
+
+      <div class="container-fluid">
+
+        <div class="section-header">
+          <h2>Event Venue</h2>
+          <p>Event venue location info and gallery</p>
+        </div>
+
+        <div class="row no-gutters">
+          <div class="col-lg-6 venue-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3198.7298188715604!2d3.171726915141748!3d36.70502987996826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x128e522f3f317461%3A0x215c157a5406653c!2sEcole%20Nationale%20Sup%C3%A9rieure%20d&#39;Informatique!5e0!3m2!1sfr!2sdz!4v1641264946454!5m2!1sfr!2sdz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+
+          <div class="col-lg-6 venue-info">
+            <div class="row justify-content-center">
+              <div class="col-11 col-lg-8">
+                <h3>École nationale supérieure d'informatique, Algiers</h3>
+                <p>Formerly the National Institute for Computer Training (INI), is an Algerian higher education institution training state engineers in computer science. It is located in Oued Smar, about 15 km from the city center of the capital Algiers, in Algeria. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="container-fluid venue-gallery-container">
+        <div class="row no-gutters">
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266965/bsides_site/venue-gallery/1_gppl7a.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266965/bsides_site/venue-gallery/1_gppl7a.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266956/bsides_site/venue-gallery/2_zpcjni.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266956/bsides_site/venue-gallery/2_zpcjni.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266965/bsides_site/venue-gallery/3_hxgrs4.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266965/bsides_site/venue-gallery/3_hxgrs4.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266975/bsides_site/venue-gallery/4_votarv.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266975/bsides_site/venue-gallery/4_votarv.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266948/bsides_site/venue-gallery/5_byhiqs.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266948/bsides_site/venue-gallery/5_byhiqs.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266993/bsides_site/venue-gallery/11_eso4xw.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266993/bsides_site/venue-gallery/11_eso4xw.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266985/bsides_site/venue-gallery/7_ollkur.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266985/bsides_site/venue-gallery/7_ollkur.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="https://res.cloudinary.com/shellmates-club/image/upload/v1641266969/bsides_site/venue-gallery/9_sjk9sr.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641266969/bsides_site/venue-gallery/9_sjk9sr.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
 
     <!--==========================
