ajusting venue size

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     ============================-->
     <section id="venue" class="wow fadeInUp">
 
-      <div class="container-fluid">
+      <div class="container">
 
         <div class="section-header">
           <h2>Event Venue</h2>
@@ -355,7 +355,7 @@
 
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
-              <div class="col-11 col-lg-8">
+              <div class="col-11 col-lg-9">
                 <h3>École nationale supérieure d'informatique, Algiers</h3>
                 <p>Formerly the National Institute for Computer Training (INI), is an Algerian higher education institution training state engineers in computer science. It is located in Oued Smar, about 15 km from the city center of the capital Algiers, in Algeria. </p>
               </div>
@@ -365,7 +365,7 @@
 
       </div>
 
-      <div class="container-fluid venue-gallery-container">
+      <div class="container venue-gallery-container">
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-4">
