adding github logo sponsor

--- a/index.html
+++ b/index.html
@@ -486,12 +486,12 @@
           <h2>Sponsors</h2>
         </div>
 
-        <div class="row no-gutters supporters-wrap clearfix">
+        <div class="row no-gutters supporters-wrap clearfix justify-content-center">
 
-          <div class="">
-          </div>
-
-          <div class="col-lg-2 col-md-0 col-xs-0">
+          <div class="col-lg-4 col-md-6 col-xs-6">
+            <div class="supporter-logo">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641343870/bsides_site/supporters/github_sw0pwc.webp" class="img-fluid" alt="">
+            </div>
           </div>
 
           <div class="col-lg-4 col-md-6 col-xs-6">
