--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li><a href="#supporters">Sponsors</a></li>
           <li><a href="#faq">FAQ</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li class="register"><a href="#registration">Register Now</a></li> 
+          <!-- <li class="register"><a href="#registration">Register Now</a></li>  -->
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -642,9 +642,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a href="https://shellmates.typeform.com/bsidesconfs" target="_blank">
-                    <button type="button" class="btn">Register Now</button>
-                  </a>
+                  <h6>Registration closed!</h6>
                 </div>
               </div>
             </div>
@@ -663,9 +661,7 @@
                 </ul>
                 <hr>
                 <div class="text-center">
-                  <a href="https://shellmates.typeform.com/bsidesworkshops" target="_blank">
-                    <button type="button" class="btn">Register Now</button>
-                  </a>
+                  <h6>Registration closed!</h6>
                 </div>
               </div>
             </div>
