--- a/index.html
+++ b/index.html
@@ -283,14 +283,13 @@
           </div>
           <div class="col-md-auto col-sm-6 speaker-container">
             <div class="speaker">
-              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/8_ht4srr.jpg" alt="Zineddine Boudegna" class="img-fluid">
+              <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641572218/bsides_site/speakers/small%20sizes/8_yga6kp.jpg" alt="Zerguini Neila" class="img-fluid">
               <div class="details">
-                <h3><a href="zinben.html">Zineddine Boudegna</a></h3>
-                <p class="text-capitalize">Cybersecurity director at Deloitte</p>
+                <h3><a href="zerguini_neila.html">Zerguini Neila</a></h3>
+                <p class="text-capitalize">Senior Manager within Deloitte Canada</p>
                 <div class="social">
-                  <a href="https://www.facebook.com/boudegna" target="_blank"><i class="fa fa-facebook"></i></a>
-                  <a href = "mailto:boudegna@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
-                  <a href="https://www.linkedin.com/in/zinedine-boudegna/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                  <a href = "mailto:zerguini.neila@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://www.linkedin.com/in/neila-zerguini" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </div>
               </div>
             </div>
@@ -335,6 +334,203 @@
       </div>
 
     </section>
+
+     <!--==========================
+      Schedule Section
+    ============================-->
+    <section id="schedule" class="section-with-bg">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h2>Event Schedule</h2>
+          <p>Here is our event schedule</p>
+        </div>
+
+        <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" href="#day-1" role="tab" data-toggle="tab">Day 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#day-2" role="tab" data-toggle="tab">Day 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#day-3" role="tab" data-toggle="tab">Day 3</a>
+          </li>
+        </ul>
+
+        <h3 class="sub-heading">The opening and closing ceremony as well as the conference will take place at Ecole National Superieur de l'informatique, Oued Smar, Algiers. The workshop details will be provided via mail to those who registered.Participants will be informed if there are any changes to the schedule.</h3>
+
+        <div class="tab-content row justify-content-center">
+
+          <!-- Schdule Day 1 -->
+          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>07:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259307/bsides_site/speakers/small%20sizes/7_onfcla.jpg" alt="Hamza Tahmi">
+                </div>
+                <h4>Conference: Back to basics. <span>Hamza Tahmi</span></h4>
+                <p>A non-technical and lightweight presentation about security core principles.</p>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 1 -->
+
+          <!-- Schdule Day 2 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>09:00 AM UTC+1</time></div>
+              <div class="col-md-10">
+                <h4>Opening Ceremony</h4>
+                <ul>
+                  <li>Presentation of the club and event (plus an overview on the BSides Algiers's history).</li>
+                  <li>A word from the president of the club, an experienced CTF player.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>10:00 AM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259304/bsides_site/speakers/small%20sizes/6_cjnvwz.jpg" alt="Nasreddine Bencherchali">
+                </div>
+                <h4>Conference: Threat detection and sigma rules. <span>Nasreddine Bencherchali</span></h4>
+                <p>Security talk by a Detection Engineer, Threat Hunter & Security Researcher.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>01:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641569953/bsides_site/speakers/3_vvqct4.jpg" alt="Menacer Djamel Eddine">
+                </div>
+                <h4>Conference: QKD Protocols. <span>Menacer Djamel Eddine</span></h4>
+                <p>Security talk by a Security Engineer & Researcher at ESI Algiers.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>02:30 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641063394/bsides_site/speakers/4_az7fra.jpg" alt="Retiat Bilal">
+                </div>
+                <h4>Workshop: Anomaly Hunting with Elastic Stack. <span>Retiat Bilal</span></h4>
+                <p>Practical Workshop by a Cybersecurity Specialist at Realistic Security.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>02:30 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112719/bsides_site/speakers/9_tdhays.png" alt="Merouan Oussama Abdallah">
+                </div>
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641112742/bsides_site/speakers/10_orxpc7.png" alt="Mokrane Abdelmalek">
+                </div>
+                <h4>Workshop: Client side security. <span>Merouan Oussama Abdallah & Mokrane Abdelmalek</span></h4>
+                <p>A Session focusing on client-side web security, covering the most frequent vulnerabilities with real-world examples and concluding with some solutions to those flaws.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>07:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/1_j9ssaw.jpg" alt="Hafidh Zouahi">
+                </div>
+                <h4>Conference: Lock Picking 101. <span>Hafidh Zouahi</span></h4>
+                <p>This talk dives into Lock Picking, the practice of manipulating lock mechanisms to crack them open without their corresponding key.</p>
+              </div>
+            </div>
+
+            
+
+          </div>
+          <!-- End Schdule Day 2 -->
+
+          <!-- Schdule Day 3 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>09:00 AM UTC+1</time></div>
+              <div class="col-md-10">
+                <h4>Check-in</h4>
+                <ul>
+                  <li>Check-in of participants.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>10:00 AM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641572218/bsides_site/speakers/small%20sizes/8_yga6kp.jpg" alt="Zerguini Neila">
+                </div>
+                <h4>Conference: Cybersecurity for Operational Technologies (OT) and Industrial Control Systems (ICS): an overview.  <span>Zerguini Neila</span></h4>
+                <p>This conference covers in a first place Operational technology (OT) cybersecurity which consists in the software, hardware, practices, personnel, and services deployed to protect operational technology infrastructure. It also presents the security aspect of industrial control systems which are used in industries such as utilities and manufacturing to automate or remotely control product production, handling and distribution.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>01:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641574344/bsides_site/speakers/small%20sizes/12_h41wsf.jpg" alt="abderrahmane Soudaki">
+                </div>
+                <h4>Conference: XDR and synchonized security.  <span>Abderrahmane Soudaki</span></h4>
+                <p>What is XDR ?</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>02:30 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/2_yfrpht.jpg" alt="Benaissa Ayoub">
+                </div>
+                <h4>Workshop: Crypto before Bitcoin. <span>Benaissa Ayoub</span></h4>
+                <p>Practical Workshop by a Crypto Engineer at Zama.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>02:30 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <div class="speaker">
+                  <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259305/bsides_site/speakers/small%20sizes/5_ae42sy.jpg" alt="Bendali Brahim">
+                </div>
+                <h4>Workshop: Pentesting Methodology & Tips. <span>Bendali Brahim</span></h4>
+                <p>Practical Workshop by a Security Researcher at Synack Red Team.</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-2"><time>09:00 PM UTC+1</time></div>
+              <div class="col-md-10">
+                <h4>Closing Ceremony</h4>
+                <ul>
+                  <li>Summary of the event.</li>
+                  <li>A word from our sponsor Realistic Security.</li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 3 -->
+        </div>
+
+      </div>
+
+    </section>
+
 
      <!--==========================
       Venue Section
