--- a/zerguini_neila.html
+++ b/zerguini_neila.html
@@ -86,26 +86,19 @@
 
         <div class="row">
           <div class="col-md-6">
-            <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641111362/bsides_site/speakers/8_dgqjo9.png" alt="Zineddine Boudegna" class="img-fluid">
+            <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641572192/bsides_site/speakers/8_rentwc.jpg" alt="Zerguini Neila" class="img-fluid">
           </div>
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Zineddine Boudegna</h2>
+              <h2>Zerguini Neila</h2>
               <div class="social">
-                <a href="https://www.facebook.com/boudegna" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href = "mailto:boudegna@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
-                <a href="https://www.linkedin.com/in/zinedine-boudegna/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href = "mailto:zerguini.neila@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
+                  <a href="https://www.linkedin.com/in/neila-zerguini" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Zineddine Boudegna is cybersecurity director at Deloitte, with more than 10 years in this field, certified information security manager, NIST Csf, ISO-27001 lead auditor, ISO-22301 lead auditor entreprise projects manager & certified ethical hacker.
+              <p>Neila Zerguini is a Senior Manager within Deloitte Canada, currently leading the Emerging Technology Cyber practice for Eastern Canada. She oversees several Cyber Risk Services focusing on Industrial Cyber Security and Strategy.
                 </p>
-              <p>He had the chance to work on many complex cyber projects on national and international level in various cyber domains such :
-                Information Security Governance,
-                Webtrust for CA,
-                Security operation centers,
-                Identity & access Management,
-                Data loss prevention,
-                Attacks Surface & Vulnerabilities Management.</p>
+              <p>In addition to various security certifications, she holds a Master's degree in Corporate Strategy from HEC Montréal and an engineering degree in Information Systems from ESI Algiers. She specializes in Cyber Security for Critical Infrastructures and Industrial Systems, focusing on the Energy, Transport and Financial sectors.</p>
             </div>
           </div>
           
