--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           </li>
         </ul>
 
-        <h3 class="sub-heading">The opening and closing ceremony as well as the conference will take place at Ecole National Superieur de l'informatique, Oued Smar, Algiers. The workshop details will be provided via mail to those who registered.Participants will be informed if there are any changes to the schedule.</h3>
+        <h3 class="sub-heading">The opening and closing ceremony as well as the conferences will take place at Ecole Nationale Supérieure d'informatique, Oued Smar, Algiers. The workshops' details will be provided via mail to those who registered. Participants will be informed if there are any changes to the schedule.</h3>
 
         <div class="tab-content row justify-content-center">
 
@@ -370,7 +370,7 @@
                 <div class="speaker">
                   <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259307/bsides_site/speakers/small%20sizes/7_onfcla.jpg" alt="Hamza Tahmi">
                 </div>
-                <h4>Conference: Back to basics. <span>Hamza Tahmi</span></h4>
+                <h4>Online Conference: Back to basics. <span>Hamza Tahmi</span></h4>
                 <p>A non-technical and lightweight presentation about security core principles.</p>
               </div>
             </div>
@@ -386,7 +386,7 @@
               <div class="col-md-10">
                 <h4>Opening Ceremony</h4>
                 <ul>
-                  <li>Presentation of the club and event (plus an overview on the BSides Algiers's history).</li>
+                  <li>Presentation of the club and event (plus an overview of the BSides Algiers event's history).</li>
                   <li>A word from the president of the club, an experienced CTF player.</li>
                 </ul>
               </div>
@@ -410,7 +410,7 @@
                   <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641569953/bsides_site/speakers/3_vvqct4.jpg" alt="Menacer Djamel Eddine">
                 </div>
                 <h4>Conference: QKD Protocols. <span>Menacer Djamel Eddine</span></h4>
-                <p>Security talk by a Security Engineer & Researcher at ESI Algiers.</p>
+                <p>Security talk by a Senior Lecturer & Researcher in Security and Virtualization fields at ESI Algiers.</p>
               </div>
             </div>
 
@@ -445,7 +445,7 @@
                 <div class="speaker">
                   <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641259306/bsides_site/speakers/small%20sizes/1_j9ssaw.jpg" alt="Hafidh Zouahi">
                 </div>
-                <h4>Conference: Lock Picking 101. <span>Hafidh Zouahi</span></h4>
+                <h4>Online Conference: Lock Picking 101. <span>Hafidh Zouahi</span></h4>
                 <p>This talk dives into Lock Picking, the practice of manipulating lock mechanisms to crack them open without their corresponding key.</p>
               </div>
             </div>
