--- a/zerguini_neila.html
+++ b/zerguini_neila.html
@@ -96,7 +96,7 @@
                 <a href = "mailto:zerguini.neila@gmail.com" target="_blank"><i class="fa fa-inbox"></i></a>
                   <a href="https://www.linkedin.com/in/neila-zerguini" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Neila Zerguini is a Senior Manager within Deloitte Canada, currently leading the Emerging Technology Cyber practice for Eastern Canada. She oversees several Cyber Risk Services focusing on Industrial Cyber Security and Strategy.
+              <p>Neila Zerguini is a Senior Manager within Deloitte Canada, currently leading the Emerging Technology Cyber Easter'n' practice Canada. She oversees several Cyber Risk Services focusing on Industrial Cyber Security and Strategy.
                 </p>
               <p>In addition to various security certifications, she holds a Master's degree in Corporate Strategy from HEC Montréal and an engineering degree in Information Systems from ESI Algiers. She specializes in Cyber Security for Critical Infrastructures and Industrial Systems, focusing on the Energy, Transport and Financial sectors.</p>
             </div>
