shortning neila description

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                   <img src="https://res.cloudinary.com/shellmates-club/image/upload/v1641572218/bsides_site/speakers/small%20sizes/8_yga6kp.jpg" alt="Zerguini Neila">
                 </div>
                 <h4>Conference: Cybersecurity for Operational Technologies (OT) and Industrial Control Systems (ICS): an overview.  <span>Zerguini Neila</span></h4>
-                <p>This conference covers in a first place Operational technology (OT) cybersecurity which consists in the software, hardware, practices, personnel, and services deployed to protect operational technology infrastructure. It also presents the security aspect of industrial control systems which are used in industries such as utilities and manufacturing to automate or remotely control product production, handling and distribution.</p>
+                <p>This conference will talk about all the software, hardware, practices, personnel, and services deployed to protect operational technology infrastructure. It will also present the security aspect of control systems used in industries such as utilities and manufacturing to automate or remotely control product production, handling and distribution.</p>
               </div>
             </div>
 
